--- a/trunk/Footballquiz/res/layout/activity_start.xml
+++ b/trunk/Footballquiz/res/layout/activity_start.xml
@@ -28,7 +28,7 @@
     <com.gtotek.football.customview.FontTextView
         android:id="@+id/tvPlay"
         style="@style/Button.Green.Medium"
-        android:layout_width="170dp"
+        android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_above="@+id/llIntro"
         android:layout_centerHorizontal="true"
