--- a/trunk/Footballquiz/res/layout/activity_victory.xml
+++ b/trunk/Footballquiz/res/layout/activity_victory.xml
@@ -1,45 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_vic" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/bg2x" >
 
-    <TextView
-        android:id="@+id/textView1"
-        style="@style/style_more_app_title"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/winjavscreen_tv_congratulation_height"
+    <com.gtotek.football.customview.FontTextView
+        android:id="@+id/tvCongru"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="15dp"
+        android:gravity="bottom|center"
+        android:text="@string/congratulations"
+        android:textColor="#ffffffff"
+        android:textSize="42.0dip"
+        app:fontName="North Face.ttf" />
+
+    <com.gtotek.football.customview.FontTextView
+        android:id="@+id/tvAdmire"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvCongru"
+        android:layout_marginTop="10dp"
+        android:gravity="top|center"
+        android:text="You&apos;re too knowledgeable about football"
+        android:textColor="#ffffffff"
+        android:textSize="24.0dip"
+        app:fontName="MyriadPro.ttf" />
+
+    <ImageView
+        android:id="@+id/img1"
+        android:layout_width="200dip"
+        android:layout_height="200dip"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="@dimen/startscreen_tv_play_margin_left_right"
-        android:layout_marginRight="@dimen/startscreen_tv_play_margin_left_right"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/congratulation_frame"
-        android:gravity="center"
-        android:text="@string/victory"
-        android:textSize="30sp" />
+        android:layout_centerVertical="true"
+        android:background="@drawable/ic_ball"
+        android:contentDescription="@string/app_name" />
 
-    <TextView
-        style="@style/style_more_app_title"
+    <com.gtotek.football.customview.FontTextView
+        android:id="@+id/tvWait"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_above="@+id/tvClose"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="@string/vic_info"
-        android:textColor="#2E2EFE"
-        android:textSize="16sp" />
+        android:layout_marginBottom="15dp"
+        android:text="Wait for the next challenge"
+        android:textColor="#ffffffff"
+        android:textSize="24.0dip"
+        app:fontName="MyriadPro-Bold.otf" />
 
-    <TextView
-        android:id="@+id/tv_back"
-        style="@style/style_tv_continues"
+    <com.gtotek.football.customview.FontTextView
+        android:id="@+id/tvClose"
+        style="@style/Button.Green.Medium"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/winscreen_tv_continues_height"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="49dp"
-        android:background="@drawable/list_item_selector"
-        android:clickable="true"
-        android:contentDescription="@string/app_name"
-        android:text="@string/close" />
+        android:layout_marginBottom="25dp"
+        android:text="@string/close"
+        app:fontName="MyriadPro-Bold.otf" />
 
 </RelativeLayout>
