--- a/trunk/Footballquiz/res/layout/dialog_win.xml
+++ b/trunk/Footballquiz/res/layout/dialog_win.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1.0"
+        android:layout_weight="2.0"
         android:clipChildren="false"
         android:orientation="vertical"
         android:weightSum="3.0" >
@@ -20,20 +20,20 @@
             android:id="@+id/tvWonderful"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom|center"
             android:layout_weight="1.0"
+            android:gravity="bottom|center"
             android:text="WONDERFUL!"
-            android:textColor="#ffffffff"
-            android:textSize="42.0dip"
-            app:fontName="MyriadPro-Bold.otf" />
+            android:textColor="#54C40F"
+            android:textSize="35.0dip"
+            app:fontName="North Face.ttf" />
 
         <com.gtotek.football.customview.FontTextView
             android:id="@+id/tvGuessed"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="top|center"
             android:layout_weight="2.0"
-            android:text="You've guessed the word"
+            android:gravity="top|center"
+            android:text="You&apos;ve guessed the word"
             android:textColor="#ffffffff"
             android:textSize="24.0dip"
             app:fontName="MyriadPro.ttf" />
@@ -44,7 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.0"
         android:scaleType="fitXY"
-        android:src="@drawable/bg_divider" />
+        android:src="@drawable/bg_divider"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -85,7 +86,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.0"
         android:scaleType="fitXY"
-        android:src="@drawable/bg_divider" />
+        android:src="@drawable/bg_divider"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="fill_parent"
