--- a/Footballquiz/res/layout/activity_start.xml
+++ b/Footballquiz/res/layout/activity_start.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/tv_foodball1" />
+        android:background="@drawable/tv_foodball" />
 
     <ImageView
         android:contentDescription="@string/app_name"
